--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
+
         <!--
                Set to true if your app is Standalone, that is, it does not require the handheld
                app to run.
@@ -22,6 +23,9 @@
             android:name="com.google.android.wearable.standalone"
             android:value="true" />
 
+        <activity
+            android:name=".ThemChiActivity"
+            android:label="@string/title_activity_them_chi"/>
         <activity
             android:name=".ChiTietThongKe"
             android:label="@string/title_activity_chi_tiet_thong_ke" />
